2019-05-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0: Becoming';git push
	git tag -a 4.8.0 -m 'ncremap se2se/fv2fv, no_stdin, vrt_fl, xcl_var;ncclimo job_nbr, OMP_PROC_BIND;ncap2 no foo.nc;ncks chk_nan';git push --tags

	* Change tst-wrt-map*.nc to nco_map_tst*.nc

	* Change --no-crd, --no-coords to --no_crd, --no_coords

	* Add synonyms --xcl_ass_var, --xtr_ass_var

2019-05-11  Charlie Zender  <zender@uci.edu>

	* Document NCO regridding algorithm

	* ncremap invoke NCO weight-generation with alg_typ=nco_xxx :)

	* NCO 4.8.0-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-beta01: Spaghetti';git push
	git tag -a 4.8.0-beta01 -m 'vrt ntp timeseries';git push --tags

	* Update documentation for time-varying vertical grids

	* nco_ntp_vrt() Verify that time-series interpolation works for	hybrid grids

	* nco_ntp_vrt() Move pressure calcuations into time loop

	* nco_ntp_vrt() Copy non-vertical variables only once (on first timestep)

2019-05-10  Charlie Zender  <zender@uci.edu>

	* Read/write vertical variables in single timeslices when output vertical grid time-varies

2019-05-09  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha12: UCLA';git push
	git tag -a 4.8.0-alpha12 -m 'ncclimo no_stdin, aims4/acme1 NCO_PATH_OVERRIDE';git push --tags

	* Document --no_stdin

	* Add --no_stdin to ncclimo to prevent false-positive stdin detection in CWL code

2019-05-06  Charlie Zender  <zender@uci.edu>

	* Add stubs for input vertical grid timeseries

	* Add cf_grp.cdl as template/test file for CF Conventions

2019-04-30  Charlie Zender  <zender@uci.edu>

	* ncremap/ncclimo add paths for aims4/acme1 to NCO_PATH_OVERRIDE section

2019-04-24  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.0-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.0-alpha11: Jazz Fest';git push