@@ -20,6 +20,10 @@ existing input file, which eliminates an indefensible and annoying
 requirement. ncks can now easily detect and identify NaNs in datasets.
 See below for a fuller list of new features and pointers to more info.
 
+Work on NCO 4.8.1 has commenced. This will include plumbing work that
+allows simultaneous horizontal and vertical regridding, and that
+allows ncclimo to invoke the vertical regridding features.
+
 Work on NCO 5.0.0 has commenced "under the hood". The key leap in that 
 release will be support for netCDF4 user-defined types. Printing of
 netCDF4 user-defined types ENUM and VLEN is ready now (though
@@ -33,7 +37,7 @@ NEW FEATURES (full details always in ChangeLog):
 
 A. ncremap now accepts two new Tempest map configurations, "se2se" and 
    "fv2fv". Use them to regrid one spectral element grid to another,
-   or one finite volume grid to another.
+   or one finite volume grid to another with TempestRemap.
    http://nco.sf.net/nco.html#se2se
    http://nco.sf.net/nco.html#fv2fv
 
@@ -62,9 +66,10 @@ D. ncremap can now interpolate files in the vertical dimension.
    ncremap --vrt_fl=vrt_fl in.nc out.nc
    http://nco.sf.net/nco.html#vrt
 
-E. ncremap now accepts the --xcl_var switch. This switch changes
-   the extraction list (specified with -v vars or --vars=vars) into an
-   exclusion list. Behavior is identical to the common NCO -x option.
+E. ncremap and ncclimo now accept the --xcl_var switch. This switch
+   changes the extraction list (specified with -v vars or --vars=vars)
+   into an exclusion list. Behavior is identical to the common NCO -x
+   option:
    ncremap --xcl_var --vars=excluded,from,output in.nc out.nc
    http://nco.sf.net/nco.html#xcl_var
 
