@@ -1,1 +1,1 @@
-4.8.0-beta01
+4.8.0
