@@ -1,8 +1,8 @@
 nco (4.8.0-1) unstable; urgency=low
 
-  * new upstream version fxm
+  * new upstream version Becoming: ncremap se2se/fv2fv, no_stdin, vrt_fl, xcl_var;ncclimo job_nbr, OMP_PROC_BIND;ncap2 no foo.nc;ncks chk_nan
 
- -- Charlie Zender <zender@uci.edu>  Thu, 20 Mar 2019 12:25:36 -0700
+ -- Charlie Zender <zender@uci.edu>  Wed, 15 May 2019 12:25:36 -0700
 
 nco (4.7.9-1) unstable; urgency=low
 
